<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/padding_2dp">

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4dp"
        android:padding="@dimen/dimen_2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/placeholder_word"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6dp"
        android:layout_toEndOf="@id/tv_word"
        android:padding="@dimen/padding_2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/ilac"
        android:textStyle="italic"
        tools:text="@string/placeholder_category"/>

    <TextView
        android:id="@+id/tv_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/placeholder_definition"/>

    <TextView
        android:id="@+id/tv_sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_definition"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:padding="@dimen/padding_2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/orange"
        android:textStyle="italic"
        tools:text="@string/placeholder_sentence"/>

</RelativeLayout>