<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:alpha="0.6"
        android:contentDescription="@string/header_img_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/books"/>

      <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_18dp"
            android:background="@android:color/white"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:padding="@dimen/dimen_16dp"
            android:layout_below="@id/header_background"
            android:textColor="@color/orange"/>

        <ImageButton
            android:id="@+id/ib_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/header_background"
            android:contentDescription="@string/ib_search_contentDesc"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@drawable/ic_search"/>

    <FrameLayout
        android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_search">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_dictionary_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"/>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/no_search_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/orange"/>

            <ProgressBar
                android:id="@+id/loadingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>


</RelativeLayout>
